VDMJ Release Notes

For more detail of these changes, and to be notified of future changes, subscribe to
https://github.com/nickbattle/vdmj/issues.

Latest Changes in version 3.0.1

2015-10-19 Remove "unused" warning for traces in SL modules
2015-10-06 Recognise \subsubsection in LaTeX files
2015-10-01 Check for non-static history operations in static sync clauses
2015-07-28 Implicit compose types should have same access as the outer type
2015-07-15 Added type checking for pure operations (RM#27)
2015-07-10 Fix for invariants failing in some cases
2015-07-07 Enable object field updates to trigger invariants
2015-07-05 Allow functions to access instance variables of arguments
2015-06-04 Prevent static constructors and limit constructor calling
2015-05-21 Correction to type check of let constants
2015-05-19 Correction to type invariants on char/bool/token
2015-05-02 Prevent RESULT in definition names
2015-03-24 Fix to typecheck of forward references
2015-03-18 Fix to typecheck of map/seq override operator
2015-03-14 Fix to typecheck of subset and psubset
2015-03-03 Correction for is_ handling of function types
2015-02-17 Created 3.0.1-P jar for arbitrary precision arithmetic
2015-01-31 Fix for combinatorial trace stemming
2015-01-29 Correction for dev, rem and mod by zero
2015-01-26 Correction to static data initialization
2015-01-21 Fix to type check of set ranges
2015-01-19 Fix to type check of object field designators
2014-12-23 Fix for runtime exception handling during initialization
2014-12-17 Correction to type check of self-referential definitions
2014-11-11 Correction to conversion of composed function values
2014-11-10 Fix IO`freadval to use specification charset
2014-11-09 Correction for object reference comparisons
2014-11-04 Introduce the -exceptions flag to throw <RuntimeException> 
2014-10-30 Correct problem with type check of unary minus expressions
2014-10-24 Fix for membership test of recursive types